<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose" />

    <Button
        android:id="@+id/buttonFacebook"
        style="@style/ButtonFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook" />

    <Button
        android:id="@+id/buttonTwitter"
        style="@style/ButtonDarkGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitter" />

    <Button
        android:id="@+id/buttonVk"
        style="@style/ButtonVkontakte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vk" />

</LinearLayout>